--- a/templates/blog_edit.html
+++ b/templates/blog_edit.html
@@ -4,25 +4,25 @@
 
 {% block content %}
 <div class="container">
-        {% with messages = get_flashed_messages(with_categories=true) %}
-        {% if messages %}
-        {% for category, message in messages %}
-        {% if category != "compileError" %}
-        <div class="alert alert-{{category}} alert-dismissible fade show mt-4" role="alert">
-                {{message | safe}}
-                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-        </div>
-        {% endif %}
-        {% endfor %}
-        {% endif %}
-        {% endwith %}
+	{% with messages = get_flashed_messages(with_categories=true) %}
+	{% if messages %}
+	{% for category, message in messages %}
+	{% if category != "compileError" %}
+	<div class="alert alert-{{category}} alert-dismissible fade show mt-4" role="alert">
+		{{message | safe}}
+		<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+	</div>
+	{% endif %}
+	{% endfor %}
+	{% endif %}
+	{% endwith %}
 </div>
 
 <div class="container-fluid p-4">
-    <div class="row p-0">
-        <div class="col-6 m-3">
-            <div class="row card shadow-sm p-0 unclickable-card mb-3">
-				<h4 class="card-header p-3"> Editing Blog Post (id: {{post.blogid}}) </h4>
+	<div class="row p-0">
+		<div class="col-6 m-3">
+			<div class="row card shadow-sm p-0 unclickable-card mb-3">
+				<h4 class="card-header p-3"> Editing Blog Post (id: <a href="/blog/{{post.blogid}}">{{post.blogid}}</a>) </h4>
 				<div class="card-body">
 					<form id="editform" action="" method="post" class="form-group" enctype="multipart/form-data">
 						<label><b>Title:</b></label>
@@ -72,14 +72,14 @@
 						<div class="input-group mb-3">
 							<input type="text" name="url" class="form-control" placeholder="Image URL" aria-label="Image URL" value="{{post.url}}">
 						</div>
-						
+
 						<div class="container col d-flex flex-column input-group mb-3">
 							<div>
 								<input class="form-check-input" type="checkbox" value="" aria-label="Checkbox for Published" name="published" {% if post.published %} checked="" {% endif %}>
 								<b>Published</b>
 							</div>
 						</div>
-						
+
 						<div class="input-group mb-3">
 							<button type="submit" class="btn btn-primary">Update</button>
 						</div>
