--- a/templates/event_list.html
+++ b/templates/event_list.html
@@ -66,7 +66,7 @@
 				</tr>
 				<tr>
 					<th scope="row" class="table-width-30"> Organiser </th>
-					<td> {{event.organiser}} </td>
+					<td> <a class="priority-link" href="/org_profile/{{event.organiserid}}">{{event.organiser}}</a> </td>
 				</tr>
 				<tr>                                    
 					<th scope="row" class="table-width-30"> Type </th>
