--- a/templates/user_home.html
+++ b/templates/user_home.html
@@ -111,38 +111,44 @@
 	<div class="row overflow-auto p-4 d-flex flex-row justify-content-center">
 		<hr>
 		<h2 style="text-align:center;">Top 5 Recommended Events for {{userinfo.username}}</h2>
-		{% for rec in topfive %}
+		{% for event in topfive %}
+
 		<div class="card shadow-sm p-0 m-3" style="width:25vw;">
-			<h4 class="card-header p-2"> {{rec.title}} </h4>
-			<img src="{{rec.url}}">
+			<h4 class="card-header p-2"> {{event.title}} </h4>
+			<img src="{{event.url}}">
 			<div class="card-body">
 				<table class="table table-borderless table-sm">
 				<tbody>
 				<tr>
 					<th scope="row" class="table-width-30"> Date </th>
-					<td> {{rec.date}} </td>
+					<td> {{event.date}} </td>
 				</tr>
 				<tr>
 					<th scope="row" class="table-width-30"> Organiser </th>
-					<td> {{rec.organiser}} </td>
-				</tr>
-				<tr>                                    
-					<th scope="row" class="table-width-30"> Type </th>
-					<td> {{rec.type}} </td>
-				</tr>
-				<tr>                                    
-					<th scope="row" class="table-width-30"> Location </th>
-					<td> {{rec.location}} </td>
+					<td> <a class="priority-link" href="/org_profile/{{event.organiserid}}">{{event.organiser}}</a> </td>
 				</tr>
 				<tr>
-                                        <th scope="row" class="table-width-30"> # of Your Friends </th>
-                                        <td> {{rec.numfriends}} </td>
-                                </tr>
+					<th scope="row" class="table-width-30"> Type </th>
+					<td> {{event.type}} </td>
+				</tr>
+				<tr>
+					<th scope="row" class="table-width-30"> Location </th>
+					<td> {{event.location}} </td>
+				</tr>
+				<tr>
+					<th scope="row" class="table-width-30"> Recurring? </th>
+					<td> {% if event.num_occurrences > 1 %} Yes {% else %} No {% endif %} </td>
+				</tr>
+				<tr>
+					<th scope="row" class="table-width-30"> # of Your Friends </th>
+					<td> {{event.numfriends}} </td>
+				</tr>
 				</tbody>
 				</table>
-				<a href="/event/{{rec.eventid}}" class="stretched-link"></a>
+				<a href="/event/{{event.eventid}}" class="stretched-link"></a>
 			</div>
 		</div>
+
 		{% endfor %}
 	</div>
 	{% endif %}
@@ -194,7 +200,7 @@
 				</tr>
 				<tr>
 					<th scope="row" class="table-width-30"> Organiser </th>
-					<td> {{event.organiser}} </td>
+					<td> <a class="priority-link" href="/org_profile/{{event.organiserid}}">{{event.organiser}}</a> </td>
 				</tr>
 				<tr>                                    
 					<th scope="row" class="table-width-30"> Type </th>
