--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3,6 +3,17 @@
   margin-right: 0.5em;
 }
 
+.table {
+  border-spacing: 0px;
+  table-layout: fixed;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.td {
+  word-break: break-all;
+}
+
 .fill {
   display: flex;
   justify-content: center;
