--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -12,7 +12,7 @@
 				<div class="card-body"><table class="table table-borderless table-sm">
 					<tbody>
 					<tr>
-						<th scope="row"> Name </th>
+						<th scope="row" class="table-width-30"> Name </th>
 						<td> {{profileinfo.name}} </td>
 					</tr><tr>
 						<th scope="row"> Username </th>
