--- a/templates/base.html
+++ b/templates/base.html
@@ -23,8 +23,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="/">
-        App Logo
-        <!--img src="{{ url_for('static', filename='logo.png') }}" width="100"> </img-->
+	      <img src="{{ url_for('static', filename='logo.png') }}" width="100">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
