--- a/templates/organiser_profile.html
+++ b/templates/organiser_profile.html
@@ -26,11 +26,15 @@
 				<div class="card-body"><table class="table table-borderless table-sm">
 					<tbody>
 					<tr>
-						<th scope="row"> Bio </th>
+						<th scope="row" class="table-width-30"> Username </th>
+						<td> {{profileinfo.organiserid}} </td>
+					</tr>
+					<tr>
+						<th scope="row" class="table-width-30"> Bio </th>
 						<td> {% autoescape false %} {{profileinfo.bio}} {% endautoescape %} </td>
 					</tr>
 					</tbody></table>
-					<a role="button" class="btn btn-primary" href="/blogs?user={{profileinfo.username}}&usertype=1">
+					<a role="button" class="btn btn-primary" href="/blogs?user={{profileinfo.organiserid}}&usertype=1">
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-file-richtext" viewBox="0 0 16 16">
                                                         <path d="M7 4.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0zm-.861 1.542 1.33.886 1.854-1.855a.25.25 0 0 1 .289-.047l1.888.974V7.5a.5.5 0 0 1-.5.5H5a.5.5 0 0 1-.5-.5V7s1.54-1.274 1.639-1.208zM5 9a.5.5 0 0 0 0 1h6a.5.5 0 0 0 0-1H5zm0 2a.5.5 0 0 0 0 1h3a.5.5 0 0 0 0-1H5z"/>
                                                         <path d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2zm10-1H4a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1z"/>
@@ -43,7 +47,7 @@
 	</div>
 
 	<div class="col p-4">
-		{% if eventlist | length != 0 %} 
+		{% if ages | length != 0 %} 
 		<div class="row mb-3">
 			<div class="col-5">
 				<h3>Volunteers' Ages</h3>
@@ -168,6 +172,21 @@
 		
 		{% else %}
 		<h4>This organiser has no events :(</h4>
+		{% if userinfo != None and userinfo['usertype'] == 1 and userinfo['organiserid'] == profileinfo['organiserid'] %}
+			<form id="createeventform" action="" method="post" class="form-group w-50">
+                                <div class="input-group mb-3">
+                                        <input type="text" name="eventid" class="form-control" placeholder="Event ID" aria-label="Event ID">
+                                        <button type="submit" class="btn btn-primary">
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar-plus" viewBox="0 0 16 16">
+                                                        <path d="M8 7a.5.5 0 0 1 .5.5V9H10a.5.5 0 0 1 0 1H8.5v1.5a.5.5 0 0 1-1 0V10H6a.5.5 0 0 1 0-1h1.5V7.5A.5.5 0 0 1 8 7z"/>
+                                                        <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1z"/>
+                                                </svg>
+                                                Create Event
+                                        </button>
+                                </div>
+                        </form>
+
+		{% endif %}
 		{% endif %}
 	</div>
 </div>
