--- a/templates/user_home.html
+++ b/templates/user_home.html
@@ -30,8 +30,8 @@
 				<div class="carousel-item carousel-image-homepage active">
 					<img src="https://media.discordapp.net/attachments/903191753086078997/994539290379948113/crop2.jpg" class="d-block w-100" alt="..." style="opacity:50%">
 				<div class="carousel-caption d-none d-md-block">
-						<h3>Meet [app name].</h3>
-						<p>An all-in-one platform showcasing volunteering opportunities and experiences.</p>
+						<h3>Welcome to EN-Volunteers!</h3>
+						<p>Our Enthusiastic Network of Volunteers showcases volunteering opportunities and experiences on this all-in-one platform.</p>
 					{% if userinfo == None %}
 					<a role="button" class="btn btn-primary" href="/login">Sign in as Volunteer!</a>
 					<a role="button" class="btn btn-success" href="/org_login">Sign in as Organiser!</a>
@@ -107,9 +107,9 @@
 			<h3>Want to view more information about your volunteering experience?</h3>
 			<a role="button" class="btn btn-primary btn-lg" href="/profile/{{userinfo.username}}">Go To My Profile</a>
 		</div>
+		<hr>
 	</div>
 	<div class="row overflow-auto p-4 d-flex flex-row justify-content-center">
-		<hr>
 		<h2 style="text-align:center;">Top 5 Recommended Events for {{userinfo.username}}</h2>
 		{% for event in topfive %}
 
@@ -137,7 +137,7 @@
 				</tr>
 				<tr>
 					<th scope="row" class="table-width-30"> Recurring? </th>
-					<td> {% if event.num_occurrences > 1 %} Yes {% else %} No {% endif %} </td>
+					<td> {% if event.num_occurrences|int > 1 %} Yes {% else %} No {% endif %} </td>
 				</tr>
 				<tr>
 					<th scope="row" class="table-width-30"> # of Your Friends </th>
@@ -150,10 +150,10 @@
 		</div>
 
 		{% endfor %}
+		<hr>
 	</div>
 	{% endif %}
 	<div class="row overflow-auto p-4 d-flex flex-row justify-content-center">
-		<hr>
 		<form id="filtereventsform" action="" method="post" class="form-group" style="width:60%">	
 			<h2 style="text-align:center">View/Filter Events!</h2>	
 			<label for="date"><b>Date Range:</b></label>
@@ -212,7 +212,7 @@
 				</tr>
 				<tr>                                    
 					<th scope="row" class="table-width-30"> Recurring? </th>
-					<td> {% if event.num_occurrences > 1 %} Yes {% else %} No {% endif %} </td>
+					<td> {% if event.num_occurrences|int > 1 %} Yes {% else %} No {% endif %} </td>
 				</tr>
 				{% if userinfo != None and userinfo['usertype'] == 0 %}
 				<tr>
