--- a/templates/organiser_event.html
+++ b/templates/organiser_event.html
@@ -105,7 +105,7 @@
 		</div>
 
 		<div class="col">
-			<img src="{{eventinfo.url}}">
+			<img src="{{eventinfo.url}}" style="max-width:100%;">
 		</div>
 	</div>
 </div>
