--- a/templates/user_event.html
+++ b/templates/user_event.html
@@ -22,83 +22,95 @@
 	<div class="row p-0">
 		<div class="col-6 m-3">
 			<div class="row card shadow-sm p-0 unclickable-card mb-3">
-				<h4 class="card-header p-3"> {{eventinfo.title}} </h4>
+				<h4 class="card-header p-3">
+					{{eventinfo.title}}
+					{% if userinfo != None and userinfo.usertype == 1 and userinfo.organiserid == eventinfo.organiser %}
+						<a href="/edit_event/{{eventinfo.eventid}}" role="button" class="btn btn-outline-primary ms-2">
+                                        		<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil" viewBox="0 0 16 16">
+                                                			<path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z"></path>
+                                        		</svg>
+                                        		Edit Event
+		                                </a>
+					{% endif %}
+				</h4>
 				<div class="card-body"><table class="table table-borderless table-sm">
 					<tbody>
 						<tr>
 							<th scope="row"> Description </th>
-							<td> {{eventinfo.description}} </td>
+							<td> We will be teaching young children how to embark on the journey of informatics and what pitfalls there will be. We will be using CP3. </td>
 						</tr>
 						<tr>
 							<th scope="row"> Date </th>
-							<td> {{eventinfo.date}} </td>
+							<td> 18/02/2022 </td>
 						</tr>
-						<tr>                                    
+						<tr>
 							<th scope="row"> Duration </th>
-							<td> {{eventinfo.hours}} hours </td>
+							<td> 2.5 hours </td>
 						</tr>
 						<tr>
 							<th scope="row"> Location </th>
-							<td> {{eventinfo.location}} </td>
+							<td> North </td>
 						</tr>
 						<tr>
 							<th scope="row"> Organiser </th>
-							<td> <a href="/org_profile/{{eventinfo.organiser}}"> {{organiserinfo.name}} </a> </td>
+							<td> <a href="/org_profile/ufocenter"> UFO Center </a> </td>
 						</tr>
 						<tr>
 							<th scope="row"> Type </th>
-							<td> {{eventinfo.type}} </td>
+							<td> Children and Youth </td>
 						</tr>
 						<tr>
 							<th scope="row"> Number of Occurrences </th>
-							<td> {{eventinfo.num_occurrences}} </td>
+							<td> 20 </td>
 						</tr>
 						<tr>
 							<th scope="row"> Next Occurrence </th>
-							<td> {{next_occurrence}} </td>
+							<td> Event has passed </td>
 						</tr>
 					</tbody></table>
-					{% if eventinfo['resources'] %}
-					<button class="btn btn-link" onclick="window.open('https://lifehack-materials.s3.us-west-2.amazonaws.com/{{eventinfo.eventid}}.zip')"> Download Resources </button>
+
+					<button class="btn btn-link" onclick="window.open('https://lifehack-materials.s3.us-west-2.amazonaws.com/tutoring_1.zip')"> Download Resources </button>
 					<form id="registerform" action="" method="post" class="form-group">
-						{% if userinfo != None and userinfo.usertype == 0 %}
-						{% if userinfo['username'] not in eventinfo['participants'] %}
-						<button type="submit" class="btn btn-primary">Register!</button>
-						{% else %}
-						<button type="submit" class="btn btn-primary">Remove Registration :(</button>
-						{% endif %}
-						{% endif %}
+
 					</form>
-					{% endif %}
+
 					<br>
-					<a role="button" class="btn btn-outline-secondary">
+		<div class="row">
+					<form id="createblog" action="" method="post" class="form-group col" style="max-width:max-content">
+
+					<button type="submit" class="btn btn-outline-secondary form-control">
 						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-megaphone" viewBox="0 0 16 16">
-							<path d="M13 2.5a1.5 1.5 0 0 1 3 0v11a1.5 1.5 0 0 1-3 0v-.214c-2.162-1.241-4.49-1.843-6.912-2.083l.405 2.712A1 1 0 0 1 5.51 15.1h-.548a1 1 0 0 1-.916-.599l-1.85-3.49a68.14 68.14 0 0 0-.202-.003A2.014 2.014 0 0 1 0 9V7a2.02 2.02 0 0 1 1.992-2.013 74.663 74.663 0 0 0 2.483-.075c3.043-.154 6.148-.849 8.525-2.199V2.5zm1 0v11a.5.5 0 0 0 1 0v-11a.5.5 0 0 0-1 0zm-1 1.35c-2.344 1.205-5.209 1.842-8 2.033v4.233c.18.01.359.022.537.036 2.568.189 5.093.744 7.463 1.993V3.85zm-9 6.215v-4.13a95.09 95.09 0 0 1-1.992.052A1.02 1.02 0 0 0 1 7v2c0 .55.448 1.002 1.006 1.009A60.49 60.49 0 0 1 4 10.065zm-.657.975 1.609 3.037.01.024h.548l-.002-.014-.443-2.966a68.019 68.019 0 0 0-1.722-.082z"/>
+							<path d="M13 2.5a1.5 1.5 0 0 1 3 0v11a1.5 1.5 0 0 1-3 0v-.214c-2.162-1.241-4.49-1.843-6.912-2.083l.405 2.712A1 1 0 0 1 5.51 15.1h-.548a1 1 0 0 1-.916-.599l-1.85-3.49a68.14 68.14 0 0 0-.202-.003A2.014 2.014 0 0 1 0 9V7a2.02 2.02 0 0 1 1.992-2.013 74.663 74.663 0 0 0 2.483-.075c3.043-.154 6.148-.849 8.525-2.199V2.5zm1 0v11a.5.5 0 0 0 1 0v-11a.5.5 0 0 0-1 0zm-1 1.35c-2.344 1.205-5.209 1.842-8 2.033v4.233c.18.01.359.022.537.036 2.568.189 5.093.744 7.463 1.993V3.85zm-9 6.215v-4.13a95.09 95.09 0 0 1-1.992.052A1.02 1.02 0 0 0 1 7v2c0 .55.448 1.002 1.006 1.009A60.49 60.49 0 0 1 4 10.065zm-.657.975 1.609 3.037.01.024h.548l-.002-.014-.443-2.966a68.019 68.019 0 0 0-1.722-.082z"></path>
 						</svg>
 						Promote on Blog!
-                    			</a>
-					<button id="share-modal-button" type="button" class="btn btn-outline-primary">
+                    			</button><input type="hidden" name="create">
+					</form>
+
+					<button id="share-modal-button" class="btn btn-outline-primary col" type="button" style="max-width:max-content;">
 						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-share-fill" viewBox="0 0 16 16">
-							<path d="M11 2.5a2.5 2.5 0 1 1 .603 1.628l-6.718 3.12a2.499 2.499 0 0 1 0 1.504l6.718 3.12a2.5 2.5 0 1 1-.488.876l-6.718-3.12a2.5 2.5 0 1 1 0-3.256l6.718-3.12A2.5 2.5 0 0 1 11 2.5z"/>
+							<path d="M11 2.5a2.5 2.5 0 1 1 .603 1.628l-6.718 3.12a2.499 2.499 0 0 1 0 1.504l6.718 3.12a2.5 2.5 0 1 1-.488.876l-6.718-3.12a2.5 2.5 0 1 1 0-3.256l6.718-3.12A2.5 2.5 0 0 1 11 2.5z"></path>
 						</svg>
 						Share with others!
 					</button>
-					<div id="modal" class="modal">
+
+	</div>
+
+		<div id="modal" class="modal">
 						<div class="modal-content">
 							<div class="modal-header">
 							    <h2 class="p-2">Sharing Options</h2>
-							    <span class="close">&times;</span>
+							    <span class="close">×</span>
 							</div>
 							<div class="modal-body">
-								<a role="button" class="btn btn-lg btn-outline-primary whatsapp-btn" href="http://web.whatsapp.com/send?text=http://35.89.21.87/event/{{eventinfo.eventid}}%20Check%20out%20this%20volunteering%20event!" data-placement="left" target="_blank">
+								<a role="button" class="btn btn-lg btn-outline-primary whatsapp-btn" href="http://web.whatsapp.com/send?text=http://35.89.21.87/event/tutoring_1%20Check%20out%20this%20volunteering%20event!" data-placement="left" target="_blank">
 									<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16">
-										<path d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232z"/>
+										<path d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232z"></path>
 									</svg>
 									WhatsApp
 								</a>
-								<a role="button" class="btn btn-lg btn-outline-primary telegram-btn" href="https://t.me/share?url=http://35.89.21.87/event/food_drive_1&text=Check%20out%20this%20volunteering%20event!" data-placement="left" target="_blank">
+								<a role="button" class="btn btn-lg btn-outline-primary telegram-btn" href="https://t.me/share?url=http://35.89.21.87/event/food_drive_1&amp;text=Check%20out%20this%20volunteering%20event!" data-placement="left" target="_blank">
 									<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telegram" viewBox="0 0 16 16">
-  									    <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.287 5.906c-.778.324-2.334.994-4.666 2.01-.378.15-.577.298-.595.442-.03.243.275.339.69.47l.175.055c.408.133.958.288 1.243.294.26.006.549-.1.868-.32 2.179-1.471 3.304-2.214 3.374-2.23.05-.012.12-.026.166.016.047.041.042.12.037.141-.03.129-1.227 1.241-1.846 1.817-.193.18-.33.307-.358.336a8.154 8.154 0 0 1-.188.186c-.38.366-.664.64.015 1.088.327.216.589.393.85.571.284.194.568.387.936.629.093.06.183.125.27.187.331.236.63.448.997.414.214-.02.435-.22.547-.82.265-1.417.786-4.486.906-5.751a1.426 1.426 0 0 0-.013-.315.337.337 0 0 0-.114-.217.526.526 0 0 0-.31-.093c-.3.005-.763.166-2.984 1.09z"/>
+  									    <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.287 5.906c-.778.324-2.334.994-4.666 2.01-.378.15-.577.298-.595.442-.03.243.275.339.69.47l.175.055c.408.133.958.288 1.243.294.26.006.549-.1.868-.32 2.179-1.471 3.304-2.214 3.374-2.23.05-.012.12-.026.166.016.047.041.042.12.037.141-.03.129-1.227 1.241-1.846 1.817-.193.18-.33.307-.358.336a8.154 8.154 0 0 1-.188.186c-.38.366-.664.64.015 1.088.327.216.589.393.85.571.284.194.568.387.936.629.093.06.183.125.27.187.331.236.63.448.997.414.214-.02.435-.22.547-.82.265-1.417.786-4.486.906-5.751a1.426 1.426 0 0 0-.013-.315.337.337 0 0 0-.114-.217.526.526 0 0 0-.31-.093c-.3.005-.763.166-2.984 1.09z"></path>
 									</svg>
 									Telegram
 								</a>
@@ -140,7 +152,7 @@
 		</div>
 
 		<div class="col">
-			<img src="{{eventinfo.url}}">
+			<img src="{{eventinfo.url}}" style="max-width:100%">
 		</div>
 	</div>
 
@@ -168,11 +180,7 @@
 				</tr>
 				</tbody>
 				</table>
-				{% if userinfo != None and userinfo['usertype'] == 1 and userinfo['organiserid'] == event.organiser %}
-				<a href="/edit_event/{{event.eventid}}" class="stretched-link"></a>
-				{% else %}
 				<a href="/event/{{event.eventid}}" class="stretched-link"></a>
-				{% endif %}
 			</div>
 		</div>
 		{% endfor %}
