--- a/templates/user_home.html
+++ b/templates/user_home.html
@@ -31,7 +31,7 @@
 					<img src="https://media.discordapp.net/attachments/903191753086078997/994539290379948113/crop2.jpg" class="d-block w-100" alt="..." style="opacity:40%">
 				<div class="carousel-caption d-none d-md-block">
 						<h3>Welcome to EN-Volunteers!</h3>
-						<p>Our Enthusiastic Network of Volunteers showcases volunteering opportunities and experiences on this all-in-one platform.</p>
+						<p>Our Enthusiastic Network of Volunteers showcases volunteering opportunities and experiences on this all-in-one platform, spreading the spirit of giving back.</p>
 					{% if userinfo == None %}
 					<a role="button" class="btn btn-primary" href="/login">Sign in as Volunteer!</a>
 					<a role="button" class="btn btn-success" href="/org_login">Sign in as Organiser!</a>
@@ -42,14 +42,14 @@
 					<img src="https://media.discordapp.net/attachments/903191753086078997/994539290715496559/crop3.jpg" class="d-block w-100" alt="..." style="opacity:40%">
 					<div class="carousel-caption d-none d-md-block">
 						<h3>Volunteers, join events with one click.</h3>
-						<p>No hassle required to source and sign up for new volunteering events. Spend more time on the things that truly matter, instead of arduous searching and sign-up processes.</p>
+						<p>Volunteering has never been this easy - we guarantee a no-hassle experience when joining new volunteering events. Spend more time on activities that truly matter, instead of arduous event-sourcing and sign-up processes.</p>
 					</div>
 				</div>
 				<div class="carousel-item carousel-image-homepage">
 					<img src="https://media.discordapp.net/attachments/903191753086078997/994539289935355914/crop1.jpg" class="d-block w-100" alt="..." style="opacity:40%">
 					<div class="carousel-caption d-none d-md-block">
 						<h3>Organisers, know your audience.</h3>
-						<p>As an organiser, learn more about your volunteers and better engage people to join your events.</p>
+						<p>As an organiser, learn more about your volunteers and better engage people to join your events. Translate your volunteers' enthusiasm into success with your beneficiaries.</p>
 					</div>
 				</div>
 			</div>
