--- a/templates/user_event.html
+++ b/templates/user_event.html
@@ -37,39 +37,41 @@
 					<tbody>
 						<tr>
 							<th scope="row"> Description </th>
-							<td> We will be teaching young children how to embark on the journey of informatics and what pitfalls there will be. We will be using CP3. </td>
+							<td> {{eventinfo.description}} </td>
 						</tr>
 						<tr>
 							<th scope="row"> Date </th>
-							<td> 18/02/2022 </td>
+							<td> {{eventinfo.date}} </td>
 						</tr>
 						<tr>
 							<th scope="row"> Duration </th>
-							<td> 2.5 hours </td>
+							<td> {{eventinfo.hours}} hours </td>
 						</tr>
 						<tr>
 							<th scope="row"> Location </th>
-							<td> North </td>
+							<td> {{eventinfo.location}} </td>
 						</tr>
 						<tr>
 							<th scope="row"> Organiser </th>
-							<td> <a href="/org_profile/ufocenter"> UFO Center </a> </td>
+							<td> <a href="/org_profile/{{eventinfo.organiser}}"> {{organiserinfo.name}} </a> </td>
 						</tr>
 						<tr>
 							<th scope="row"> Type </th>
-							<td> Children and Youth </td>
+							<td> {{eventinfo.type}} </td>
 						</tr>
 						<tr>
 							<th scope="row"> Number of Occurrences </th>
-							<td> 20 </td>
+							<td> {{eventinfo.num_occurrences}} </td>
 						</tr>
 						<tr>
 							<th scope="row"> Next Occurrence </th>
-							<td> Event has passed </td>
+							<td> {{next_occurrence}} </td>
 						</tr>
 					</tbody></table>
 
-					<button class="btn btn-link" onclick="window.open('https://lifehack-materials.s3.us-west-2.amazonaws.com/tutoring_1.zip')"> Download Resources </button>
+					{% if eventinfo.resources %}
+					<button class="btn btn-link" onclick="window.open('https://lifehack-materials.s3.us-west-2.amazonaws.com/{{eventinfo.eventid}}.zip')"> Download Resources </button>
+					{% endif %}
 					<form id="registerform" action="" method="post" class="form-group">
 
 					</form>
@@ -78,6 +80,7 @@
 		<div class="row">
 					<form id="createblog" action="" method="post" class="form-group col" style="max-width:max-content">
 
+					{% if userinfo != None %}
 					<button type="submit" class="btn btn-outline-secondary form-control">
 						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-megaphone" viewBox="0 0 16 16">
 							<path d="M13 2.5a1.5 1.5 0 0 1 3 0v11a1.5 1.5 0 0 1-3 0v-.214c-2.162-1.241-4.49-1.843-6.912-2.083l.405 2.712A1 1 0 0 1 5.51 15.1h-.548a1 1 0 0 1-.916-.599l-1.85-3.49a68.14 68.14 0 0 0-.202-.003A2.014 2.014 0 0 1 0 9V7a2.02 2.02 0 0 1 1.992-2.013 74.663 74.663 0 0 0 2.483-.075c3.043-.154 6.148-.849 8.525-2.199V2.5zm1 0v11a.5.5 0 0 0 1 0v-11a.5.5 0 0 0-1 0zm-1 1.35c-2.344 1.205-5.209 1.842-8 2.033v4.233c.18.01.359.022.537.036 2.568.189 5.093.744 7.463 1.993V3.85zm-9 6.215v-4.13a95.09 95.09 0 0 1-1.992.052A1.02 1.02 0 0 0 1 7v2c0 .55.448 1.002 1.006 1.009A60.49 60.49 0 0 1 4 10.065zm-.657.975 1.609 3.037.01.024h.548l-.002-.014-.443-2.966a68.019 68.019 0 0 0-1.722-.082z"></path>
@@ -85,6 +88,7 @@
 						Promote on Blog!
                     			</button><input type="hidden" name="create">
 					</form>
+					{% endif %}
 
 					<button id="share-modal-button" class="btn btn-outline-primary col" type="button" style="max-width:max-content;">
 						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-share-fill" viewBox="0 0 16 16">
