--- a/templates/organiser_profile.html
+++ b/templates/organiser_profile.html
@@ -147,15 +147,15 @@
 				<table class="table table-borderless table-sm">
 				<tbody>
 				<tr>
-					<th scope="row" class="table-width-30"> Date </th>
+					<th scope="row" style="width:50%;"> Date </th>
 					<td> {{event.date}} </td>
 				</tr>
 				<tr>
-					<th scope="row" class="table-width-30"> Type </th>
+					<th scope="row" style="width:50%;"> Type </th>
 					<td> {{event.type}} </td>
 				</tr>
 				<tr>
-					<th scope="row" class="table-width-30"> Location </th>
+					<th scope="row" style="width:50%;"> Location </th>
 					<td> {{event.location}} </td>
 				</tr>
 				</tbody>
